--- a/package.json
+++ b/package.json
@@ -23,23 +23,31 @@
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/barcode-scanner": "^4.7.0",
     "@ionic-native/core": "4.6.0",
+    "@ionic-native/http": "^4.7.0",
+    "@ionic-native/speech-recognition": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic-native/toast": "^4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
+    "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.6.2",
     "ionic": "^3.20.0",
     "ionic-angular": "3.9.2",
+    "ionic-material": "^0.4.1",
+    "ionic-native-http-connection-backend": "^4.0.6",
     "ionicons": "3.0.0",
     "phonegap-plugin-barcodescanner": "^7.1.1",
     "rxjs": "5.5.8",
+    "spawn-sync": "^1.0.15",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
@@ -56,7 +64,9 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-speechrecognition": {}
     },
     "platforms": [
       "android"
