--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
     "@ionic-native/barcode-scanner": "^4.7.0",
-    "@ionic-native/core": "4.6.0",
+    "@ionic-native/core": "^4.7.0",
+    "@ionic-native/google-maps": "^4.8.2",
     "@ionic-native/http": "^4.7.0",
     "@ionic-native/speech-recognition": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
@@ -34,14 +35,14 @@
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-googlemaps": "^2.3.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
-    "cordova-plugin-speechrecognition": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.6.2",
     "ionic": "^3.20.0",
-    "ionic-angular": "3.9.2",
+    "ionic-angular": "^3.9.2",
     "ionic-material": "^0.4.1",
     "ionic-native-http-connection-backend": "^4.0.6",
     "ionicons": "3.0.0",
@@ -65,11 +66,11 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-advanced-http": {},
-      "cordova-plugin-speechrecognition": {}
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
