--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/google-maps": "^4.8.2",
     "@ionic-native/http": "^4.7.0",
+    "@ionic-native/in-app-browser": "^4.7.0",
     "@ionic-native/speech-recognition": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
@@ -42,6 +43,7 @@
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.3.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -82,7 +84,8 @@
       "cordova-plugin-geolocation": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
