--- a/package.json
+++ b/package.json
@@ -27,26 +27,30 @@
     "@ionic-native/file": "^4.7.0",
     "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/geolocation": "^4.7.0",
-    "@ionic-native/google-maps": "^4.8.2",
     "@ionic-native/http": "^4.7.0",
     "@ionic-native/in-app-browser": "^4.7.0",
+    "@ionic-native/network": "^4.7.0",
     "@ionic-native/speech-recognition": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
+    "@ionic-native/themeable-browser": "^4.7.0",
     "@ionic-native/toast": "^4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "7.0.0",
+    "@types/google-maps": "^3.2.0",
+    "cordova-android": "^7.1.0",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-googlemaps": "^2.3.1",
+    "cordova-plugin-googlemaps": "^2.3.6",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.2.0",
+    "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-themeablebrowser": "^0.2.17",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-toast": "^2.6.2",
     "ionic": "^3.20.0",
@@ -54,10 +58,12 @@
     "ionic-material": "^0.4.1",
     "ionic-native-http-connection-backend": "^4.0.6",
     "ionicons": "3.0.0",
+    "minimist": "^1.2.0",
     "phonegap-plugin-barcodescanner": "^7.1.1",
     "rxjs": "5.5.8",
     "spawn-sync": "^1.0.15",
     "sw-toolbox": "3.6.0",
+    "xml2js": "^0.4.19",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -75,17 +81,13 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyD6FclBwySs3RZ-tAlf0dfMzUUuX3WKehw",
-        "API_KEY_FOR_IOS": "AIzaSyBaVYyDEdtOwrYh-mHjN6dg7AfxBt1pdgI",
-        "PLAY_SERVICES_VERSION": "15.0.1",
-        "ANDROID_SUPPORT_V4_VERSION": "26.1.0"
-      },
       "cordova-plugin-geolocation": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-file": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-themeablebrowser": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android",
